gitops/manifests/trilium/trilium-docker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  namespace: trilium
  labels:
    app: trilium
    app.kubernetes.io/name: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
        app.kubernetes.io/name: trilium
    spec:
      containers:
      - name: trilium
        image: triliumnext/notes:v0.95.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"  
            cpu: "300m"      
          limits:
            memory: "2Gi"  
            cpu: "1" 
        volumeMounts:
        - name: trilium-data
          mountPath: /home/node/trilium-data
        # - name: tz-config
        #   mountPath: /etc/timezone
        #   readOnly: true
        # - name: localtime-config
        #   mountPath: /etc/localtime
        #   readOnly: true
      volumes:
      - name: trilium-data
        persistentVolumeClaim:
          claimName: pvc-trilium
      # - name: tz-config
      #   hostPath:
      #     path: /etc/timezone
      #     type: File
      # - name: localtime-config
      #   hostPath:
      #     path: /etc/localtime
      #     type: File
---
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: trilium
  labels:
    app.kubernetes.io/name: trilium
spec:
  selector:
    app: trilium
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 8080 # app listens here
  # type: LoadBalancer # for debugging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "900"
    
spec:
  ingressClassName: nginx
  rules:
  - host: trilium.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trilium
            port:
              number: 80
  tls:
  - hosts:
      - trilium.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
